--- a/src/pages/exchange-detail/index.scss
+++ b/src/pages/exchange-detail/index.scss
@@ -15,6 +15,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: 576px) {
+      display: inline-block;
+    }
   }
 
   &__name {
@@ -26,6 +30,10 @@
     }
     img {
       margin-right: 10px;
+    }
+
+    @media screen and (max-width: 576px) {
+      margin-bottom: 10px;
     }
   }
 
